Dodat front, Lottie animacija

--- a/step-counter/app.json
+++ b/step-counter/app.json
@@ -18,10 +18,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.katarinamilovanovic.stepcounter"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "44d1cde0-0cc4-4265-aa91-486760d7c24b"
+      }
     }
   }
 }
