--- a/step-counter/package.json
+++ b/step-counter/package.json
@@ -14,7 +14,8 @@
     "expo-status-bar": "~1.12.1",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "expo-dev-client": "~4.0.21"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
