--- a/step-counter/package.json
+++ b/step-counter/package.json
@@ -9,13 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
+    "@react-native-firebase/app": "^20.4.0",
+    "@react-native-firebase/auth": "^20.4.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.24",
+    "expo-dev-client": "~4.0.21",
     "expo-sensors": "~13.0.9",
     "expo-status-bar": "~1.12.1",
-    "lottie-react-native": "^6.7.2",
+    "firebase": "^10.13.1",
+    "lottie-react-native": "6.7.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.3",
-    "expo-dev-client": "~4.0.21"
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-reanimated": "^3.15.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
