Login i registracija preko http zatheva

--- a/step-counter/.gitignore
+++ b/step-counter/.gitignore
@@ -8,6 +8,9 @@ node_modules/
 dist/
 web-build/
 
+.firebase-backend
+step-counter-10f91-firebase-adminsdk-gs7ar-f5b2b84508
+
 # Native
 *.orig.*
 *.jks
