--- a/step-counter/package.json
+++ b/step-counter/package.json
@@ -14,6 +14,8 @@
     "@react-native-firebase/auth": "^20.4.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "expo": "~51.0.24",
     "expo-dev-client": "~4.0.21",
     "expo-sensors": "~13.0.9",
