--- a/step-counter/package.json
+++ b/step-counter/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "expo": "~51.0.24",
     "expo-dev-client": "~4.0.21",
     "expo-sensors": "~13.0.9",
@@ -27,6 +29,8 @@
     "react-native": "0.74.3",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-reanimated": "^3.15.1",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
