--- a/step-counter/package.json
+++ b/step-counter/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-firebase/app": "^20.4.0",
-    "@react-native-firebase/auth": "^20.4.0",
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/auth": "^17.4.2",
+    "@react-native-picker/picker": "^2.8.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.24",
+    "expo": "^45.0.8",
     "expo-dev-client": "~4.0.21",
     "expo-sensors": "~13.0.9",
     "expo-status-bar": "~1.12.1",
