--- a/step-counter/firebase-backend/package.json
+++ b/step-counter/firebase-backend/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "firebase-admin": "^12.4.0"
+    "firebase-admin": "^12.4.0",
+    "expo": "^51.0.0",
+    "react-native": "0.74.5",
+    "react": "18.2.0"
   }
 }
