--- a/step-counter/package.json
+++ b/step-counter/package.json
@@ -10,32 +10,32 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-firebase/app": "^17.4.2",
-    "@react-native-firebase/auth": "^17.4.2",
-    "@react-native-picker/picker": "^2.8.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^17.5.0",
+    "@react-native-firebase/auth": "^17.5.0",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
-    "expo": "^45.0.8",
-    "expo-dev-client": "~4.0.21",
+    "expo": "^51.0.0",
+    "expo-dev-client": "~4.0.26",
     "expo-sensors": "~13.0.9",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.1",
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.3",
-    "react-native-gesture-handler": "^2.19.0",
-    "react-native-reanimated": "^3.15.1",
-    "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.34.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
